typescript/checker/tests/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement1.ts.stderr
error: Return statement is not allowed here
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement1.ts:1:1
  |
1 | return;
  | ^^^^^^^

